--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,6 @@
 $breakpoint-md: 50rem;
-$breakpoint-sm: 30rem;
+$breakpoint-sm: 35rem;
+$breakpoint-xs: 25rem;
 
 $beat-interval: 2.5;
 $bg-count: 25; // must be divisible by 100
