--- a/style.css
+++ b/style.css
@@ -135,18 +135,6 @@ body {
   background-color: var(--purple-darkest);
 }
 
-@media (prefers-reduced-motion: reduce) {
-  *,
-*:before,
-*:after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-    --transition-duration: 0.01ms !important;
-  }
-}
-
 .skip-link {
   display: inline-block;
   margin: 1rem auto;
@@ -479,14 +467,14 @@ header .container {
 @supports (display: grid) {
   header .container {
     display: grid;
-    gap: 2rem;
     grid-template-areas: "link" "title" "subtitle" "credit";
     grid-template-columns: 100%;
     grid-template-rows: max-content max-content max-content max-content;
+    min-height: 100vh;
+    gap: 2rem;
   }
   @media (min-width: 65rem) {
     header .container {
-      min-height: 100vh;
       gap: 1rem;
     }
   }
@@ -538,7 +526,7 @@ header h2 {
   font-size: var(--h4-font-size);
   color: var(--header-text-secondary);
 }
-@media (min-width: 30rem) {
+@media (min-width: 35rem) {
   header h2 {
     font-size: var(--h3-font-size);
   }
@@ -601,7 +589,7 @@ header h1 {
   --scaleX-fudge: 0;
   --scaleY-fudge: 0;
 }
-@media (min-width: 30rem) {
+@media (min-width: 35rem) {
   header h1 {
     --rotate: -20deg;
     --translateX: 0ch;
